@startuml
'https://plantuml.com/sequence-diagram

left to right direction

entity Usuario{
nombre
apellidoPaterno
apellidoMaterno
rut
nombreUsuario
contraceña
menbrecia
}

entity Libros{

id libro
tituloLibro
autor
genero 1 libro
genero 2 libro
cantida de paginas
anio de publicacion
stock libro
}

entity Peliculas{

id pelicula
nombre de la pelicula
director
genero 1 pelicula
genero 2 pelicula
cantidad de horas
cantidad de minutos
anio de estreno
stock pelicula
}

note "(hora= 0) si la pelicula dura menos de 1h" as N1
note "la menbresia son solo 3 (normal,premiun,vid)" as N2

Usuario"1" --->"0...*" Peliculas:Arrienda
Usuario"1" ---> "0...*"Libros:Arrienda
Usuario -> N2
Peliculas -->N1


@enduml